# crewAI

./: .gitignore  create_presentation.py  package-lock.json  package.json  requirements.txt
geuax/: README.md  pyproject.toml
geuax/src/geuax/: crew.py  main.py
src/education_crewai/: main.py
src/education_crewai/config/: agents.py
src/education_crewai/tools/: downloader_tool.py
