[tool.poetry]
name = "geuax"
version = "0.1.0"
description = "geuax using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
geuax = "geuax.main:run"
train = "geuax.main:train"
replay = "geuax.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
